--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,7 @@
 <html>
+
 <head>
+	<link rel="stylesheet" type="text/css" href="style/style.css">
 	<title>Game_Of_Life</title>
 	<script type="text/javascript" src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
@@ -13,11 +15,13 @@
 	<script src="class/class.satan.js"></script>
 	<script src="class/class.devil.js"></script>
 	<script src="script.js"></script>
-	<link rel="stylesheet" type="text/css" href="style/style.css">
+
 </head>
 <body>
-	<h1>Game Of Life #by Aram</h1>
-	<h2 id="weather">Weather -- Spring</h2> 
-	<h2><a href="stats.html" target=”_blank”>Statistika</a><h2>
+	<div class="golDiv">
+		<h2 id="weather">Weather -- Spring</h2>
+		<h2><a href="stats.html" target=”_blank”>Statistika</a><h2>
+	</div>
 </body>
+
 </html>
