--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="style/style.css">
 	<title>Game_Of_Life</title>
 	<script type="text/javascript" src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
