--- a/public/stats.html
+++ b/public/stats.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <title>Տեստ</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style/stats.css">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="/socket/socket.io.js"></script>
