--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style/style.css">
   <title>Game Of Life</title>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <!-- <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
   <script src="class/class.LivingCreature.js"></script>
   <script src="class/class.grass.js"></script>
@@ -19,9 +19,9 @@
 </head>
 
 <body>
-  <div class="golDiv">
+  <!-- <div class="golDiv">
     <h2 id="weather">Weather -- Spring</h2>
-  </div>
+  </div> -->
 </body>
 
 </html>
